2008-12-21  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* pkgIndex.tcl.in: Provide both "Img" and "img" package name.

2008-11-14  Andreas Kupries  <andreask@activestate.com>

	* tkImgUtils.c: Fixed syntax error reported by MSVC.

2006-01-27  Andreas Kupries <andreask@activestate.com>

	* configure.in: TEA 3.5 upgrade, do not use TK_LIBS (anymore).
	* configure:    Regenerated.

2004-12-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkimg.h: use TK_PHOTO_COMPOSITE_SET instead of
	TK_PHOTO_COMPOSITE_OVERLAY to ensure initial alpha is taken
	directly from source image (without compositing). [Bug 987107]

2004-08-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tkimg 1.3 ========================
	*

2002-11-26  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl.in: Added index script to load all format handlers
	  when requiring 'Img', i.e. the old package.

2002-11-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* tkimgUtils.c (tkimg_FixObjMatchProc):
	* tkimgUtils.c (tkimg_FixChanMatchProc): Changed bit-negation to
	  logical negation. This fixes a bug intriduced by the rewrite to
	  use version info to distinguish between calls from 8.3.2 and
	  8.3. The bug caused the procedure to bail out without rotating
	  the arguments, causing the remainder to end up with the argument
	  in the wrong places, crashing the system when trying to read
	  from the channel or data object.

	  Looking at the signatures I believe that the inherited code is
	  still wrong for calls from 8.3.2.

2002-11-20  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* Makefile.in: The configure variable TK_XINCLUDES has to placed
	  in variable, to avoid problem on platforms placing a shell
	  comment into it. More in the Makefile.

2002-11-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tkimg.h (tkimg_PhotoPutBlockTk): Added a convenience macro