@@ -1,6 +1,7 @@
-2008-12-21  Jan Nijtmans <nijtmans@users.sourceforge.net>
+2010-04-09  Jan Nijtmans <nijtmans@users.sourceforge.net>
 
-	* pkgIndex.tcl.in: Provide both "Img" and "img" package name.
+	* Make all of Tk's stub table entries available to tkImg,
+	  no matter what Tk version we are compiling against.
 
 2008-11-14  Andreas Kupries  <andreask@activestate.com>
 
